# Comprehensive-Transformer-TTS

./: pyproject.toml  requirements.txt
src/comp_trans_tts/: __init__.py  dataset.py
src/comp_trans_tts/audio/: __init__.py  stft.py  tools.py
src/comp_trans_tts/deepspeaker/: __init__.py  embedder.py  preprocess.py
src/comp_trans_tts/model/: CompTransTTS.py  __init__.py  loss.py  modules.py
src/comp_trans_tts/model/transformers/: __init__.py  blocks.py  conformer.py  fastformer.py  lstransformer.py  reformer.py  transformer.py  transformer_fs2.py
src/comp_trans_tts/preprocessor/: ljspeech.py  preprocessor.py  vctk.py
src/comp_trans_tts/text/: __init__.py  symbols.py
src/comp_trans_tts/utils/: model.py  pitch_tools.py  tools.py
