[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comp_trans_tts"
version = "0.1.0"
requires-python=">=3.11"
dependencies = [
    "product_key_memory==0.1.10",
    "local_attention==1.4.3",
    "rotary_embedding_torch==0.1.0",
    "python_speech_features==0.6",
    "inflect==4.1.0",
    "pyloudnorm==0.1.0",
    "pypinyin==0.39.0",
    "pycwt==0.3.0a22",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "soundfile==0.13.1",
    "tgt==1.4.4",
    "unidecode==1.1.1",
    "einops>=0.3",
    "numba>=0.51.0",
    "tensorboard>=2.18.0",
    "pandas>=2.3.2",
    "g2p_en>=2.1.0",
    "librosa>=0.11.0",
    "matplotlib>=3.2.2",
    "numpy>=2.2.6",
    "torch>=2.5.1",
    "tqdm>=4.66.5",
]
